package ru.nsu.masolygin.actor.employee;

/**
 * Базовый интерфейс для профилей всех сотрудников пиццерии.
 */
public interface StaffProfile {

    /**
     * Возвращает уникальный идентификатор сотрудника.
     *
     * @return идентификатор сотрудника
     */
    int id();
}
